--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "echarts": "^4.6.0",
     "element-ui": "^2.13.0",
     "js-cookie": "^2.2.1",
+    "v-charts": "^1.19.0",
     "vue": "^2.6.10",
-    "vue-echarts": "^5.0.0-beta.0",
     "vue-router": "^3.1.5"
   },
   "devDependencies": {
@@ -25,6 +25,7 @@
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "sass-loader": "^8.0.2",
+    "vue-echarts": "^5.0.0-beta.0",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
